# filesystem-mcp-server-python

./: .gitignore  README.md  main.py  path_utils.py  pyproject.toml  test_filesystem_security.py  test_path_utils.py  test_validation.py
docs/: python-mcp-sdk.md
